compiler/testData/checkerWithErrorTypes/quick/kt600.jet
//KT-600 Problem with 'sure' extension function type inference
// +JDK

fun <T : Any> T?.sure() : T { if (this != null) return this else throw NullPointerException() }

fun test() {
    val i : Int? = 10
    val <!UNUSED_VARIABLE!>i2<!> : Int = i.sure() // inferred type is Int? but Int was excepted
}
